[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
  "bandit",
  "build",
  "bump-my-version",
  "cohesion",
  # The coverage==3.5.3 is difficult to analyze its dependencies by dependencies management tool,
  # so we should avoid 3.5.3 or lower.
  # - Command: "pipenv install --skip-lock" fails 
  #   since it tries to parse legacy package metadata and raise InstallError
  #   · Issue #5595 · pypa/pipenv
  #   https://github.com/pypa/pipenv/issues/5595
  "coverage>=3.5.4",
  # The dlint less than 0.14.0 limits max version of flake8.
  # - dlint/requirements.txt at 0.13.0 · dlint-py/dlint
  #   https://github.com/dlint-py/dlint/blob/0.13.0/requirements.txt#L1
  "dlint>=0.14.0",
  # To the docformatter load pyproject.toml settings:
  "docformatter[tomli]; python_version < '3.11'",
  "docformatter; python_version >= '3.11'",
  "dodgy",
  # The hacking depends flake8 ~=6.1.0 or ~=5.0.1 or ~=4.0.1.
  # We should avoid the versions that is not compatible with the hacking,
  # considering the speed of dependency calculation process
  "flake8!=6.0.0,!=5.0.0,>=4.0.1",
  # To replace E501 in pycodestyle with B950 in flake8-bugbear:
  # - Using Black with other tools - Black 25.1.0 documentation
  #   https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#bugbear
  "flake8-bugbear",
  # To use flake8 --radon-show-closures
  "flake8-polyfill",
  # To use pyproject.toml for Flake8 configuration
  "Flake8-pyproject",
  # Latest hacking depends on legacy version of flake8, and legacy hacking doesn't narrow flake8 version.
  # When unpin hacking, it has possibility to install too legacy version of hacking.
  "hacking>=5.0.0",
  "invokelint>=0.8.1",
  "jinja2",
  "mypy",
  "numpy",
  "pylint",
  "pytest",
  "pytest-asyncio",
  "pytest-freezegun",
  "pytest-mock",
  "pytest-resource-path",
  "pyvelocity",
  "radon",
  "requests-mock",
  "ruff>=0.0.17",
  "semgrep",
  "tomli",
  "types-freezegun",
  "types-invoke",
  "types-requests",
  "types-setuptools",
  "xenon",
]


[project]
name = "radikopodcast"
version = "1.2.0"
description = "Automatic archiver for radiko program which queried by YAML file."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = [
    "radiko",
    "radikopodcast",
]
authors = [
    {name = "Master", email = "roadmasternavi@gmail.com"},
]
maintainers = [
    {name = "Master", email = "roadmasternavi@gmail.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Multimedia",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Capture/Recording",
    "Topic :: System",
    "Topic :: System :: Archiving",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: System :: Filesystems",
    "Typing :: Typed",
]
dependencies = [
  # To request in asynchronously to archive Time Free 30 programs efficiently
  "aiohttp",
  "asynccpu",
  "asyncffmpeg",
  # To implement commandline tool efficiently
  "click",
  # For Bandit warning:
  # - blacklist_imports - Bandit documentation
  #   https://bandit.readthedocs.io/en/1.7.4/blacklists/blacklist_imports.html#b405-import-xml-etree
  "defusedxml",
  # To validate XML from radiko API
  "errorcollector",
  # To control ffmpeg by Python
  "ffmpeg-python",
  # To generate table name by model class name
  "inflector",
  # - blocking-path-method-in-async-function (ASYNC240) | Ruff
  #   https://docs.astral.sh/ruff/rules/blocking-path-method-in-async-function/
  "anyio",
  # To sanitize program title for file name
  "pathvalidate",
  # To interact with radiko API to get media playlist
  "radikoplaylist",
  # To manage radiko programs by database (now using SQLite)
  "sqlalchemy; platform_machine == 'x86_64' or platform_machine == 'AMD64'",
  # To prevent following error:
  #   error: Distribution `greenlet==3.4.0 @ registry+https://pypi.org/simple` can't be installed because it doesn't have a source distribution or wheel for the current platform
  # - greenlet is not installed on Apple M1 · Issue #7714 · sqlalchemy/sqlalchemy
  #   https://github.com/sqlalchemy/sqlalchemy/issues/7714#issuecomment-3341917565
  "sqlalchemy[asyncio]; platform_machine == 'arm64' or platform_machine == 'aarch64'",
  # To use YAML config file for list of programs to archive
  "yamldataclassconfig",
]

[project.entry-points."console_scripts"]
radiko-podcast = "radikopodcast.cli:radiko_podcast"

[project.urls]
homepage = "https://github.com/road-master/radiko-podcast"
# documentation = "https://readthedocs.org"
repository = "https://github.com/road-master/radiko-podcast"
# changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[tool.bandit.assert_used]
skips = ["tests/*"]

[tool.bumpversion]
current_version = "1.2.0"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "radikopodcast/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[tool.coverage.report]
exclude_also = [
    # Assume `if TYPE_CHECKING: ... else: ...` block is covered · Issue #831 · nedbat/coveragepy
    #   https://github.com/nedbat/coveragepy/issues/831#issuecomment-517778185
    "if TYPE_CHECKING:",
    # Pylint will detect instead:
    # - abstract-method / W0223 - Pylint 2.17.0-dev0 documentation
    #   https://pylint.readthedocs.io/en/latest/user_guide/messages/warning/abstract-method.html
    "raise NotImplementedError",
]

[tool.docformatter]
recursive = true
# For compatibility with Black
# - How to Configure docformatter — docformatter 1.7.5 documentation
#   https://docformatter.readthedocs.io/en/stable/configuration.html#a-note-on-options-to-control-styles
pre_summary_space = true
wrap-descriptions = 119
wrap-summaries = 119

[tool.flake8]
# Since B950 in flake8-bugbear detects lines that exceed max_line_length by more than 10%:
# - PyCQA/flake8-bugbear: A plugin for Flake8 finding likely bugs and design problems in your program. Contains warnings that don't belong in pyflakes and pycodestyle.
#   https://github.com/PyCQA/flake8-bugbear?tab=readme-ov-file#opinionated-warnings
# This setting follows the Black documentation in case when we use flake8-bugbear:
# - Using Black with other tools - Black 25.1.0 documentation
#   https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#bugbear
max_line_length = 108
extend_ignore = [
  # For compatibility with Black:
  # - Using Black with other tools - Black 25.1.0 documentation
  #   https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#bugbear
  "E203",
  "E501",
  "E701",
  # 2025-05-24 Now openstack/hacking wasn't introduced into Ruff and sorting imports is mainly considered with isort.
  "H306",
  # Cohesion may be in experimental.
  "H601",
]
statistics = true
show_source = true
exclude = [
  ".venv",
]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = [
    "defusedxml.*",
    "ffmpeg",
    "inflector",
]
ignore_missing_imports = true

[tool.pylint]
disable = [
    # We check line length by flake8-bugbear B950.
    "line-too-long",
]

[tool.pylint.basic]
docstring-min-length = "7"

[tool.pylint.format]
max-line-length = 119

[tool.pylint.options]
# Since this rule against single responsibility principle.
# - python - Why does Pylint want two public methods per class? - Stack Overflow
#   https://stackoverflow.com/a/40258006/12721873
min-public-methods = "1"

[tool.pylint.typecheck]
ignored-classes = [
    "scoped_session",  # @see https://stackoverflow.com/questions/59214324/flask-error-db-scoped-session-instance-of-scoped-session-has-no-commit-mem/59214469#59214469
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.radon]
cc_min = "B"
show_complexity = true
show_mi = true

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # lint.pydocstyle
    # Reason: Docstring may be missed since docstring-min-length is set.
    "D101",    # Missing docstring in public class
    "D102",    # Missing docstring in public method
    "D103",    # Missing docstring in public function
    "D105",    # Missing docstring in magic method
    "D106",    # Missing docstring in public nested class
    "D107",    # Missing docstring in __init__
    # Reason: First line may ends with ":" for expression.
    "D400",   # First line should end with a period
    # Reason: First line may ends with function signature for expression.
    "D402",    # First line should not be the function’s “signature”
    # Reason: First line may ends with ":" for expression.
    "D415",    # First line should end with a period, question mark, or exclamation point
    # Reason: `Line too long` is checked by flake8-bugbear.
    "E501",    # Line too long ({width} > {limit})
]
unfixable = [
    # When fix `return a and b != ""` as `return a and b`, mypy will report warning:
    #   error: Incompatible return value type (got "Union[Literal[False], str]", expected "bool")  [return-value]
    "PLC1901",
]

[tool.ruff.lint.isort]
# To follow H301: Do not import more than one module per line (*) in Flake8 + openstack/hacking
force-single-line = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.setuptools]
zip-safe = false

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.setuptools.packages.find]
include = ["radikopodcast", "radikopodcast.*"]
